--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/league-spartan": "^5.0.21",
+    "@fontsource-variable/raleway": "^5.0.21",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
